--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -10,7 +10,7 @@ author_profile: true
 {% include base_path %}
 {% capture written_label %}'None'{% endcapture %}
 
-If the embedded PDF below does not load, you can <u><a href="https://daweijian3.github.io/files/Dawei_CV_OM.pdf">download it here.</a></u>
+If the embedded PDF below does not load, you can <u><a href="https://daweijian3.github.io/files/Dawei_CV_OM.pdf">download it here. Updated (9/26/2022)</a></u>
 <br/>
 
 <embed src="https://daweijian3.github.io/files/Dawei_CV_OM.pdf" type="application/pdf" width="100%" />
