--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -3,7 +3,6 @@ layout: archive
 title: ""
 permalink: /cv/
 author_profile: true
-
 ---
 
 
@@ -12,7 +11,7 @@ author_profile: true
 
 <h3>Updated 9/26/2022.</h3>
 
-If the embedded PDF below does not load, you can <u><a href="https://daweijian3.github.io/files/Dawei_CV_OM.pdf">download it here.</a></u>
+If the embedded PDF below does not load, you can <u><a href="https://daweijian3.github.io/files/Dawei_CV.pdf">download it here.</a></u>
 <br/>
 
-<embed src="https://daweijian3.github.io/files/Dawei_CV_OM.pdf" type="application/pdf" width="100%" />
+<embed src="https://daweijian3.github.io/files/Dawei_CV.pdf" type="application/pdf" width="100%" />
