--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -11,9 +11,9 @@ author_profile: true
 
 <h3>Updated 9/26/2022.</h3>
 
-If the embedded PDF below does not load, you can <u><a href="https://daweijian3.github.io/files/Dawei_CV.pdf">download it here.</a></u>
+If the embedded PDF below does not load, you can <u><a href="">download it here.</a></u>
 <br/>
 
 <h3> </h3>
 
-<embed src="https://daweijian3.github.io/files/Dawei_CV.pdf" type="application/pdf" width="100%" />
+<embed src="" type="application/pdf" width="100%" />
